--- a/template/invoice.html
+++ b/template/invoice.html
@@ -8,28 +8,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Invoice Transaksi</title>
+    <title>Invoice #{{no}}</title>
   </head>
   <body>
     <div class="container">
-        <h1>Invoice for {{nama}}</h1>
+        <h1>Invoice for {{nama}} || #{{no}}</h1>
 
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <td>No Invoice</td>
-                    <td>Nama</td>
-                    <td>Tanggal</td>
-                    <td>Total Harga</td>
+                    <td>Product Name</td>
+                    <td>Quantity</td>
+                    <td>Price</td>
                 </tr>
             </thead>
             <tbody>
+              {{#each cart}}
                 <tr>
-                    <td>{{no}}</td>
-                    <td>{{nama}}</td>
-                    <td>{{tanggal}}</td>
-                    <td>{{total}}</td>
+                    <td>{{product_name}}</td>
+                    <td>{{quantity}}</td>
+                    <td>{{price}}</td>
                 </tr>
+              {{/each}}
             </tbody>
         </table>
     </div>
